--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Nice</string>
+
+    <string name="login_button_text">Login</string>
+    <string name="dummy_content">Nice App</string>
 </resources>
