--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,25 @@
 <resources>
     <string name="app_name">Nice</string>
 
-    <string name="login_button_text">Login</string>
-    <string name="dummy_content">Nice App</string>
+    <!--splash-->
+    <string name="login_button_text">Sign In</string>
+    <string name="register_button_text">Register</string>
+
+    <string name="flash_app_name">Nice App</string>
+    <string name="flash_app_title">Stay Connected</string>
+    <string name="flash_app_content">Connect with Nice Director and  Managers. Send message directly, share reports and your work logs. View your daily tasks and update them.</string>
+    <string name="btn_forgot_password">Forgot Password?</string>
+    <string name="email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="register_lebel">New User</string>
+    <string name="hint_school_name">Enter scholl name here</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="loginLabel">Login</string>
+    <string name="back"><![CDATA[<<Back]]></string>
+    <string name="reset_password">Reset Password</string>
+    <string name="forgot_password_msg">We just need your registerd Email Id to sent the password reset instructions</string>
+
+
+    <!--register-->
+
 </resources>
