--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,14 @@
     <string name="forgot_password_msg">We just need your registerd Email Id to sent the password reset instructions</string>
     <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
     <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
+    <string name="title_activity_user_home">UserHomeActivity</string>
+    <string name="title_activity_admin">AdminActivity</string>
 
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="task_name">Enter Task Name</string>
 
 
     <!--register-->
