--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,15 @@
     <string name="save">Save</string>
     <string name="enter_task_deadline">Enter task deadline</string>
 
+    <string name="action_delete">Delete</string>
+    <string name="action_copy">Copy</string>
+    <string name="copied_message">Message copied!</string>
+    <string name="on_log_click_message">Your custom long click handler</string>
+    <string name="hint_enter_a_message">Type a message…</string>
+
+
+
+
 
     <!--register-->
 
