--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,8 @@
     <string name="login_button_text">Sign In</string>
     <string name="register_button_text">Register</string>
 
-    <string name="flash_app_name">Nice App</string>
     <string name="flash_app_title">Stay Connected</string>
     <string name="flash_app_content">Connect with Nice Director and  Managers. Send message directly, share reports and your work logs. View your daily tasks and update them.</string>
-    <string name="btn_forgot_password">Forgot Password?</string>
     <string name="email">Email</string>
     <string name="hint_password">Password</string>
     <string name="register_lebel">New User</string>
@@ -18,15 +16,7 @@
     <string name="back"><![CDATA[<<Back]]></string>
     <string name="reset_password">Reset Password</string>
     <string name="forgot_password_msg">We just need your registerd Email Id to sent the password reset instructions</string>
-    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
-    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
-    <string name="title_activity_user_home">UserHomeActivity</string>
-    <string name="title_activity_admin">AdminActivity</string>
 
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-
-    <string name="action_settings">Settings</string>
     <string name="task_name">Enter Task Name</string>
     <string name="task_description">Task Description</string>
     <string name="assign_to">Assign To</string>
@@ -40,8 +30,14 @@
     <string name="on_log_click_message">Your custom long click handler</string>
     <string name="hint_enter_a_message">Type a message…</string>
 
+    <!--home screen-->
+    <string name="title_home">Home</string>
+    <string name="title_messages">Messages</string>
+    <string name="title_tasks">Tasks</string>
+    <string name="title_profile">Profile</string>
 
-
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
     <!--register-->
