--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="title_messages">Messages</string>
     <string name="title_tasks">Tasks</string>
     <string name="title_profile">Profile</string>
+    <string name="title_reports">Reports</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
