--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,13 +9,9 @@
     <string name="flash_app_content">Connect with Nice Director and  Managers. Send message directly, share reports and your work logs. View your daily tasks and update them.</string>
     <string name="email">Email</string>
     <string name="hint_password">Password</string>
-    <string name="register_lebel">New User</string>
     <string name="hint_school_name">Enter scholl name here</string>
     <string name="forgot_password">Forgot Password?</string>
-    <string name="loginLabel">Login</string>
-    <string name="back"><![CDATA[<<Back]]></string>
     <string name="reset_password">Reset Password</string>
-    <string name="forgot_password_msg">We just need your registerd Email Id to sent the password reset instructions</string>
 
     <string name="task_name">Enter Task Name</string>
     <string name="task_description">Task Description</string>
@@ -40,8 +36,16 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="create_new">Create New</string>
+    <string name="enter_group_name">Enter Group Name</string>
+    <string name="description">description</string>
+    <string name="group_members">Group Members</string>
+    <string name="name">name</string>
 
 
     <!--register-->
+
+    <!--attendance-->
+    <string name="done">Done</string>
 
 </resources>
